# PhoebusTesting

./: README.md  our_phoebus.sh  pyproject.toml  settings.ini
bobfiles/: testing_no_pvi.bob
bobfiles/manual/: empty.bob  motor_sub.bob  shutter.bob  testing_dls_classes.bob  testing_no_pvi.bob  testing_no_pvi_custom_classes.bob
bobfiles/pvi/: MOTOR.bob  MOTOR_$(M).bob  PVI_GENERATED.bob  TEMP.bob
bobfiles/pvibobs/: ADAravis.pvi.bob  ADAravis.pviORG.bob  AutoADGenICam.pvi.bob  LUT6.bob  SYSTEM.bob
bobfiles/pvibobs/pvi/: MOTOR.bob
bobfiles/shutter_example/: motor_sub.bob  shutter.bob  temp_sub.bob
bobfiles/timing_example/: master_timing_controller.bob
classes_testing/: DEFAULT.bcf  classes.bcf  dls_classes.bcf
css_reference/: motor_detail.opi  open_reference_css_screen.sh
css_reference/cs-studio-opi/: S1.opi  motor_embed.opi  motor_embed_box.opi
src/phoebus_testing/: __init__.py  __main__.py  generate_manual_records.py  generate_pvi_example_records.py  generate_pvi_records.py  generate_shutter_records.py  generate_timing_records.py  pvi_wrapper.py  testIOC.py  utils.py
src/phoebus_testing.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
